Added error handling

--- a/LoanCalculator/app/src/main/res/values/strings.xml
+++ b/LoanCalculator/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="monthly_payment">Monthly Payment</string>
     <string name="total_payment">Total Payment</string>
     <string name="total_interest">Total Interest</string>
+    <string name="user_warning">Be sure to fill in all fields!</string>
 
 </resources>
